# dldk

./: .gitignore  README.md  flake.nix  pandoc.template  pyproject.toml  writeup.md
interactive/: __init__.py  main.py
models/: q.py
showoff/: __init__.py  main.py
train/: __init__.py
