[tool.poetry]
name = "dldk"
version = "0.1.0"
description = ""
authors = ["Sam <30577766+Samasaur1@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "interactive"},
    {include = "train"},
    {include = "showoff"},
    {include = "models"},
]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
tensorboard = "^2.16.2"
scikit-learn = "^1.4.1"
tqdm = "^4.66.2"
gymnasium = {extras = ["accept-rom-license"], version = "^0.29.1"}
torch = "^2.2.2"
torchvision = "^0.17.2"
seaborn = "^0.13.2"
pygame = "^2.5.2"
ale-py = "^0.8.1"
shimmy = "^1.3.0"

[tool.poetry.scripts]
interactive = "interactive:main"
train = "train:main"
showoff = "showoff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
